Clean sonar issues